--- a/roles/catalogue/vars/main.yaml
+++ b/roles/catalogue/vars/main.yaml
@@ -1,1 +1,5 @@
 app_version: "1.0.0"
+nexus_url: http://172.31.88.69:8081/repository
+group_id: "com/roboshop"
+nexus_username: admin
+nexus_password: Chandu@123
