--- a/roles/common/tasks/app-setup.yaml
+++ b/roles/common/tasks/app-setup.yaml
@@ -6,6 +6,7 @@
 
 #when: out.rc != 0 
 - name: create user roboshop
+  become: yes
   when: out.rc != 0
   ansible.builtin.user: 
     name: roboshop
@@ -25,13 +26,20 @@
     path: /app
     state: directory
 
-- name: download {{component}} artifacts
+# - name: download {{component}} artifacts
+#   ansible.builtin.get_url:
+#     url: "https://roboshop-builds.s3.amazonaws.com/{{component}}.zip"
+#     dest: /tmp
+
+- name: download artifact from Nexus
   ansible.builtin.get_url:
-    url: "https://roboshop-builds.s3.amazonaws.com/{{component}}.zip"
-    dest: /tmp
+    url: "{{nexus_url}}/{{component}}/{{group_id}}/{{component}}/{{app_version}}/{{component}}-{{app_version}}.zip"
+    dest: "/app/{{component}}-{{app_version}}.zip"
+    username: "{{nexus_username}}"
+    password: "{{nexus_password}}"
 
 - name: extract {{component}} artifact
   ansible.builtin.unarchive:
-    src: /tmp/{{component}}.zip
-    dest: /app 
+    src: "/app/{{component}}-{{app_version}}.zip"
+    dest: "/app" 
     remote_src: yes
